@@ -18,6 +18,7 @@ dh-cmake (0.4~) UNRELEASED; urgency=low
   * Added quoting and backslashes to DEB_CTEST_OPTIONS.
   * Added track and catchfailed options to DEB_CTEST_OPTIONS.
   * Added dh_ctest_update step.
+  * Added dh_ctest_clean step.
 
  -- Kyle Edwards <kyle.edwards@kitware.com>  Tue, 12 May 2020 15:25:00 -0400
 
